# agentic_ai

./: Crewai_Agents.ipynb  README.md
Q2/: Class_04_RAG__28_12_2024.ipynb
Q2/.ipynb_checkpoints/: Class_04_RAG__28_12_2024-checkpoint.ipynb
Q2/Project2/: pyproject.toml
Q2/Project2/src/karachi/lahore/: myfile.py
Q2/Project2/src/project2/: hello.py
Q2/Project3/: pyproject.toml
Q2/Project3/src/project3/: hello.py
Q2/api litellm/Project4/: pyproject.toml
Q2/api litellm/Project4/src/project4/: hello.py
Q2/crewai llm yt/ai_latest_development/src/ai_latest_development/: main.py
Q2/uv project1/: pyproject.toml
crewai llm yt/ai_latest_development/src/ai_latest_development/: crew.py
