[project]
name = "project3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MAW", email = "muhammadabdulwahab89@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.59.12",
]

[project.scripts]
project = "project3:main"
api_key = "project3.hello:call_gemini"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
